<resources>
    <string name="navigation_drawer_open">Open menu</string>
    <string name="navigation_drawer_close">Close menu</string>
    <string name="app_name">OpenStack</string>
    <string name="action_filter">Filter</string>
    <string name="action_scheduled_status">Scheduled</string>
    <string name="action_add_to_calendar">Add to Calendar</string>
    <string name="action_rsvp">RSVP required</string>
    <string name="action_share_event">Share Event</string>
    <string name="share_event_text">Check out this #OpenStack session I’m attending at the #OpenStackSummit!</string>
    <string name="action_send">Send</string>
    <string name="action_create_feedback">Leave a Review</string>
    <string name="log_in">SIGN IN</string>
    <string name="log_out">LOG OUT</string>
    <string name="search_placeholder">Type to search...</string>
    <string name="events">Events</string>
    <string name="event">Event</string>
    <string name="notification">Notification</string>
    <string name="tracks">Tracks</string>
    <string name="track">Track</string>
    <string name="speakers">Speakers</string>
    <string name="search">Search</string>
    <string name="no_results">No results</string>
    <string name="summit_types">Summit Types</string>
    <string name="track_groups">Summit Categories</string>
    <string name="event_types">Event Types</string>
    <string name="level">Difficulty Level</string>
    <string name="levels">Difficulty Levels</string>
    <string name="filter">Filters</string>
    <string name="tags">Tags</string>
    <string name="past_talks">Active Sessions</string>
    <string name="video_talks">Recorded Sessions</string>
    <string name="past_talks_hide">Hide Past Sessions</string>
    <string name="video_talks_show">Show only recorded Sessions</string>
    <string name="profile">Profile</string>
    <string name="venues">Venues</string>
    <string name="rooms">Rooms</string>
    <string name="venue">Venue</string>
    <string name="location">Location</string>
    <string name="feedback">Rate</string>
    <string name="about">About</string>
    <string name="send">Send</string>
    <string name="no_data_message">There was a problem loading summit information. If there is no internet connection active, please wait until it is available and click "retry" to load information.</string>
    <string name="new_data_message">There is a new Summit Available. Do you want to download it now?</string>
    <string name="retry">Retry</string>
    <string name="load_more">Load More</string>
    <string name="yes">Yes</string>
    <string name="not_now">Not now</string>
    <string name="no_summit_data">Can\'t perform operation until summit information is available</string>
    <string name="external_venues">External Venues</string>
    <string name="login_disallowed_no_connectivity">There is no network connectivity. Login can\'t be performed</string>
    <string name="login_disallowed_no_data">Summit data is required to login</string>
    <string name="moderator">Moderator</string>
    <string name="not_summit_attendee">You\'re not a summit attendee. You have to be registered as summit attendee in order to login</string>
    <string name="no_summit_data_available">No summit data available</string>
    <string name="please_wait">Please wait...</string>
    <string name="no_logged_in_user">There is no logged in user. Operation can\'t be performed</string>
    <string name="no_events">No events for current day</string>
    <string name="no_feedback">You provided no feedback yet</string>
    <string name="are_you_summit_attendee">Are you a summit attendee?</string>
    <string name="dont_forget_to_link_ticket">Don\'t forget to add your Eventbrite order #!</string>
    <string name="order_not_found">Order wasn\'t found. Please verify that you provided correct order # and try again.</string>
    <string name="eventbrite_order_confirmation">Eventbrite Order Confirmation</string>
    <string name="eventbrite_order_already_in_use">This Order# has already been associated with another user. If you feel this is an error, please contact summitsupport@openstack.org or enter a different Order #.</string>
    <string name="eventbrite_multiple_matches">Multiple tickets are assigned to provided order #. Please pick your name from the list to finish confirmation process</string>
    <string name="eventbrite_order_confirm">EventBrite Order</string>
    <string name="eventbrite_add_order_number">Add your Eventbrite Order # to associate your OpenStackID with your Summit purchase.</string>
    <string name="eventbrite_order_number">Insert your Order #</string>
    <string name="cannot_load_event">It\'s not possible to view this event right now.</string>
    <string name="cannot_navigate_event">It appears your Summit Event data is not up to date. Do you want to check for new Summit Data?.</string>
    <string name="cannot_navigate_event_negative">No, try it later.</string>
    <string name="cannot_navigate_event_positive">Yes, check for new data.</string>
    <string name="event_not_exist">This event was removed from schedule.</string>
    <string name="venue_not_exists">This venue was removed from schedule.</string>
    <string name="room_not_exists">This venue was removed from schedule.</string>
    <string name="average_rating">Average Rating</string>
    <string name="loading_ratings_and_reviews">Loading Ratings &amp; Reviews...</string>
    <string name="title_activity_initial_data_loading_activiy">InitialDataLoadingActiviy</string>
    <string name="nav_item_notifications">INBOX</string>
    <string name="nav_item_settings">SETTINGS</string>
    <string name="nav_item_about">ABOUT</string>
    <string name="nav_item_my_summit">MY SUMMIT</string>
    <string name="nav_item_profile">PROFILE</string>
    <string name="nav_item_venues">VENUES</string>
    <string name="nav_item_speakers">SPEAKERS</string>
    <string name="nav_item_events">EVENTS</string>
    <string name="notifications">Inbox</string>
    <string name="Settings">Settings</string>
    <string name="notifications_empty_list">You do not have any notification at the moment.</string>
    <string name="search_title">Search</string>
    <string name="delete">Delete</string>
    <string name="menu_item_go_2_event">Go to event</string>
    <string name="notification_not_found">Notification not found</string>
    <string name="switch_enable_notifications_text">Block all notifications</string>
    <string name="switch_enable_notifications_subtext">Never show notifications from this app</string>
    <string name="feedback_disclaimer">* This feedback will be publicly available.</string>
    <string name="feedback_rate_session">Rate Session</string>
    <string name="error_message_title">error</string>
    <string name="login_error_message">We sorry, there was an error with your login process, please try again.</string>
    <string name="notification_error_ssl_cert_invalid">Seems that there is some issue with SSL certificate. Do you want to continue?</string>
    <string name="missing_activity_error">You do not have installed any application to manage the requested action.</string>
    <string name="session_expired_message">Your session has expired.</string>
    <string name="redeem_external_order_not_found_error">EventBrite order number not found or does not exist!</string>
    <string name="redeem_external_order_already_done_error">EventBrite Order # already redeemed!</string>
    <string name="redeem_external_order_attendee_does_not_exists_error">EventBrite attendee is not registered!</string>
    <string name="push_notification_default_title">OpenStack Notification</string>
    <string name="splash_login_button_txt">SIGN IN USING OPENSTACK ID</string>
    <string name="splash_guest_button_txt">continue as guest</string>
    <string name="splash_days_left_label">days left</string>
    <string name="splash_day_left_label">day left</string>
    <string name="splash_current_day">day</string>
    <string name="now">NOW</string>
    <string name="save_favorite">Watch Later</string>
    <string name="remove_favorite">Don\'t Watch Later</string>
    <string name="save_going">Schedule</string>
    <string name="save_rsvp">RSVP</string>
    <string name="remove_going">Unschedule</string>
    <string name="cancel">Cancel</string>
    <string name="removed_from_favorites">Removed from Watch Later</string>
    <string name="added_2_favorites">Added to Watch Later</string>
    <string name="removed_from_going">Removed from My Schedule</string>
    <string name="added_2_going">Added to My Schedule</string>
    <string name="error_not_in_favorites">Event %d is not in Users Watch Later!.</string>
    <string name="error_not_in_schedule">Event %d is not in Users My Schedule!.</string>
    <string name="error_event_not_found">Event %d not found!.</string>
    <string name="error_already_in_favorites">Event %d is already in Users Watch Later!.</string>
    <string name="error_already_in_schedule">Event %d is already in Users My Schedule!.</string>
    <string name="rate">Rate</string>
    <string name="event_details_reviews">%1$d Reviews</string>
    <string name="download_attachment">Download Attachment</string>
    <string name="download_slide">Download Slide</string>
    <string name="add_eventbrite_order_action">Add EventBrite Order</string>
    <string name="add_order_action">Add Order</string>
    <string name="my_summit_profile_tab_title">PROFILE</string>
    <string name="my_summit_schedule_tab_title">SCHEDULE</string>
    <string name="my_summit_favorites_tab_title">WATCH LIST</string>
    <string name="my_summit_sessions_tab_title">SESSIONS</string>
    <string name="eventbrite_ticket_added">EventBrite Ticket Added</string>
    <string name="eventbrite_not_attendee_alert_dialog_title">Eventbrite Order</string>
    <string name="eventbrite_not_attendee_alert_dialog_body">Are you a summit attendee?</string>
    <string name="eventbrite_not_attendee_alert_dialog_ok">Yes</string>
    <string name="eventbrite_not_attendee_alert_dialog_cancel">No</string>
    <string name="missing_eventbrite_order_indicator_text">Do not forget to add your EventBrite Order #</string>
    <string name="event_rate_hint">Write a Review ...</string>
    <string name="alert_login_required_title">Login Required</string>
    <string name="alert_login_required_body">You must be logged in to use this function.</string>
    <string name="alert_login_required_ok">Login Now</string>
    <string name="alert_login_required_cancel">Dismiss</string>
    <string name="alert_attendee_required_title">EventBrite Ticket Required</string>
    <string name="alert_attendee_required_body">Only attendees can use this function. Enter your Eventbrite order number in My Summit if you are an attendee.</string>
    <string name="alert_attendee_required_ok">Add Now</string>
    <string name="alert_attendee_required_cancel">Dismiss</string>
    <string name="unrsvp_action">UnRSVP</string>
    <string name="generic_error_message_ok">Ok</string>
    <string name="generic_validation_error_title"></string>
    <string name="generic_error_title">We are sorry, there was an error</string>
    <string name="generic_error_message">It has been reported to our dev team</string>
    <string name="generic_info_title">We are sorry, there was an error</string>
    <string name="profile_not_found">Profile not found.</string>
    <string name="feedback_validation_error_event_not_started">Can only rate after event has started.</string>
    <string name="error_events_has_ended">All presentations are finished for today.</string>
    <string name="first_rate_text">There are no reviews so far.\nBe the first to rate this event.</string>
    <string name="no_connectivity_message">Please ensure you have an internet connection to perform this task.</string>
    <string name="vertical_dots">&#8942;</string>
    <string name="fcm_channel_name">Open Infrastructure Summit</string>
</resources>