<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/grp1">
        <item
            android:id="@+id/schedule_item_menu_save_going_action"
            android:title="@string/save_going"
            android:icon="@drawable/ic_event_available"
            />

        <item
            android:id="@+id/schedule_item_menu_remove_going_action"
            android:title="@string/remove_going"
            android:icon="@drawable/ic_event_busy"
            />

        <item
            android:id="@+id/schedule_item_menu_save_favorite_action"
            android:title="@string/save_favorite"
            android:icon="@drawable/ic_favorite" />

        <item
            android:id="@+id/schedule_item_menu_remove_favorite_action"
            android:title="@string/remove_favorite"
            android:icon="@drawable/ic_favorite_border"
            />
    </group>
    <group android:id="@+id/grp2">
        <item
            android:id="@+id/schedule_item_menu_cancel_action"
            android:title="@string/cancel"
            />
    </group>
</menu>