<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.linearlistview.LinearListView
                android:id="@+id/filter_summit_types_list"
                style="@style/AppTheme.FilterSectionList" />

            <LinearLayout style="@style/AppTheme.SubsectionHeader">
                <TextView
                    style="@style/AppTheme.SubsectionHeader.Text"
                    android:text="@string/track_groups"/>
            </LinearLayout>
            <com.linearlistview.LinearListView
                android:id="@+id/filter_track_groups_list"
                style="@style/AppTheme.FilterSectionList" />
            <LinearLayout style="@style/AppTheme.SubsectionHeader">
                <TextView
                    style="@style/AppTheme.SubsectionHeader.Text"
                    android:text="@string/levels"/>
            </LinearLayout>
            <com.linearlistview.LinearListView
                android:id="@+id/filter_levels_list"
                style="@style/AppTheme.FilterSectionList" />

            <LinearLayout style="@style/AppTheme.SubsectionHeader">
                <TextView
                    style="@style/AppTheme.SubsectionHeader.Text"
                    android:text="@string/venues"/>
            </LinearLayout>
            <com.linearlistview.LinearListView
                android:id="@+id/filter_venues_list"
                style="@style/AppTheme.FilterSectionList" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>