<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        style="@style/AppTheme.InformationBarContainerBorderBottom"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/event_name"
            android:textIsSelectable="true"
            style="@style/AppTheme.EventRateTitle"
            android:text="Marketplace Opening"/>
        <LinearLayout
            android:layout_gravity="center"
            android:paddingRight="10dp"
            android:layout_margin="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/feedback_rate_1"
                style="@style/AppTheme.BigStarRate"
                android:tag="1"/>
            <ImageView
                android:id="@+id/feedback_rate_2"
                style="@style/AppTheme.BigStarRate"/>
            <ImageView
                android:id="@+id/feedback_rate_3"
                style="@style/AppTheme.BigStarRate"/>
            <ImageView
                android:id="@+id/feedback_rate_4"
                style="@style/AppTheme.BigStarRate"/>
            <ImageView
                android:id="@+id/feedback_rate_5"
                style="@style/AppTheme.BigStarRate"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        style="@style/AppTheme.InformationBarContainerBorderBottom"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/feedback_review_text"
            android:layout_width="match_parent"
            android:layout_height="210dp"
            android:layout_margin="20dp"
            android:background="@color/white"
            android:gravity="top|left"
            android:hint="@string/event_rate_hint"
            android:maxLength="500"
            android:maxLines="10"
            android:padding="10dp"
            android:singleLine="false"
            android:textSize="15dp" />

    </LinearLayout>

    <Button
        android:layout_marginTop="15dp"
        android:id="@+id/feedback_create_button"
        style="@style/AppTheme.EventDetailActionButton"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:text="@string/send"/>
    <TextView
        android:layout_gravity="left"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:id="@+id/disclaimer_note"
        android:text="@string/feedback_disclaimer"/>
</LinearLayout>